# AI-Powered-Request-Handler

./: .editorconfig  .env  .eslintrc.js  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  commands.json  docker-compose.yml  pyproject.toml  startup.sh
.github/workflows/: ci.yml  deploy.yml
api/: requirements.txt
api/src/: main.py
api/src/config/: settings.py
api/src/controllers/: request_controller.py
api/src/models/: request_model.py
api/src/services/: request_service.py
celery/: __init__.py  tasks.py
docs/: api_specification.md  architecture_diagram.md  developer_guide.md
migrations/: 0001_initial.py  __init__.py  env.py  versions.py
scripts/: build.sh  deploy.sh  run.sh
security/: auth_middleware.py  input_validation.py
tests/: test_request_controller.py  test_request_service.py
