[tool.poetry]
name = "ai-request-handler"
version = "0.1.0"
description = ""
authors = ["Your Name <your_email@example.com>"]

[tool.poetry.dependencies]
fastapi = "0.115.2"
uvicorn = "0.32.0"
pydantic = "2.9.2"
sqlalchemy = "2.0.36"
psycopg2-binary = "2.9.10"
PyJWT = "2.9.0"
docker = "7.1.0"
docker-compose = "1.29.2"
pytest = "8.3.3"
black = "24.10.0"
flake8 = "7.1.1"
openai = "1.52.0"
redis = "5.1.1"
alembic = "1.13.3"
celery = "5.4.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.py$'
exclude = '''
(
  /(
    \.eggs
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)'''